# TrackTok

./: .dockerignore  .env.example  .flake8  .gitignore  API_DOCS.md  DEPLOYMENT.md  DEVELOPMENT.md  DEV_DEPLOYMENT.md  DOCKER_GUIDE.md  Makefile  NETWORK_TROUBLESHOOTING.md  OPENAPI_IMPLEMENTATION.md  PROJECT_SUMMARY.md  Prompts.txt  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20251128_0449_initial_schema.py
app/: __init__.py
app/core/: __init__.py  config.py  extensions.py  logging.py  security.py  tenancy.py
app/middleware/: __init__.py  request_id.py  tenancy.py
app/models/: __init__.py  account.py  alert.py  audit.py  base.py  budget.py  category.py  expense.py  project.py  tenant.py  user.py  user_preferences.py
app/schemas/: __init__.py  account.py  alert.py  budget.py  category.py  common.py  expense.py  project.py  tenant.py  user.py  user_preferences.py
app/services/: __init__.py  alerts.py  balance.py  forecasting.py  password_reset.py  reporting.py  tenant.py
app/tasks/: __init__.py  alerts.py  celery_app.py  reports.py
app/templates/: base.html  dashboard.html  how_to_use.html  landing.html  profile.html  settings.html
app/utils/: __init__.py  decorators.py  errors.py  filters.py  pagination.py
app/web/: __init__.py  forms.py  views.py
docker/: Dockerfile  Dockerfile.worker  entrypoint.sh
docs/: OPENAPI_EXPORT.md
migrations/versions/: 1b3c5e0ac9a1_expense_datetime.py  7a1d3f2b9acb_project_scoped_categories.py  a0d0062df1c0_initial_migration.py  e442b08c1fe1_placeholder_revision.py
scripts/: export_openapi.py  init_db.py  seed.py  verify_openapi.py
static/css/: dark.css  main.css
static/js/: app.js  (+1 more)
tests/: __init__.py  conftest.py
(+48 files in other folders)
